--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -50,6 +50,7 @@ stages:
     - script: |
         python -m venv antenv
         source antenv/bin/activate
+        pip install pylint
         make install
         make lint
       workingDirectory: $(projectRoot)
